clap_derive/tests/ui/enum_variant_not_args.rs
#[derive(clap::Clap)]
enum Opt {
    Sub(SubCmd),
}

#[derive(clap::Clap)]
enum SubCmd {}

fn main() {}
